--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -1,27 +1,48 @@
 .header {
-	background-color: rgb(195, 220, 231);
-	padding: 50px 0;
+  &__top-inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    padding-bottom: 29px;
+  }
 
-	&__row {
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-	}
-}
+  &__content {
+    background-image: url('../img/header-bg.jpg');
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+  }
 
-.overlay {
-  position: fixed;
-  width: 100vw;
-  height: 100%;
-  top: 0;
-  background-color: rgba(41, 41, 41, 0.6);
-  opacity: 0;
-  pointer-events: none;
-  transition: 0.5s all;
-}
+  &__content-inner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    min-height: calc(100vh - 94px);
+  }
 
-.overlay--active {
-  opacity: 1;
-  pointer-events: all;
-  transition: 0.5s all;
+  &__title {
+    margin-top: auto;
+    padding-top: 180px;
+    margin-bottom: 50px;
+    font-family: var(--font-accent);
+    font-size: 72px;
+    font-weight: 500;
+    text-align: center;
+    color: var(--light);
+  }
+
+  &__subtitle {
+    margin-bottom: auto;
+    font-family: var(--font-accent);
+    font-size: 16px;
+    font-weight: 700;
+    letter-spacing: 2.743px;
+    text-align: center;
+    color: var(--accent);
+  }
+
+  &__icon {
+    margin-bottom: 62px;
+  }
 }
