feat: add section About

--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -5,8 +5,9 @@
   --font-main: 'Open Sans', sans-serif;
   --font-accent: 'Montserrat', sans-serif;
 
-  // --page-bg: #ffffff;
-  --text-color: #373a39;;
+  --page-bg: #f6f8fa;
+  --text-color: #373a39;
+  --title-color: #242121;
   --accent: #fcbb08;
   --light: #ffffff;
 
