--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -8,11 +8,33 @@ html {
 }
 
 body {
-  // background-color: var(--page-bg);
   color: var(--text-color);
   font-family: var(--font-main);
   font-weight: 300;
   font-size: 14px;
   font-style: normal;
   line-height: 24px;
+}
+
+.title {
+  position: relative;
+  align-self: flex-start;
+  padding-bottom: 14px;
+  font-family: var(--font-accent);
+  font-size: 60px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 75px;
+  letter-spacing: -1.65px;
+  color: var(--title-color);
+}
+
+.title::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 60px;
+  height: 4px;
+  background-color: var(--accent);
 }
