--- a/src/scss/blocks/_menu.scss
+++ b/src/scss/blocks/_menu.scss
@@ -15,6 +15,7 @@
     font-weight: 700;
     letter-spacing: 0.6px;
     text-transform: uppercase;
+    color: var(----text-color);
     transition: all 0.3;
 
     &:after {
