feat: add section Expertise

--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -10,6 +10,7 @@
   --title-color: #242121;
   --accent: #fcbb08;
   --light: #ffffff;
+  --dark: #1d1d1d;
 
   // --laptop-size: 1199px;
   // --tablet-size: 959px;
