--- a/src/scss/blocks/_footer.scss
+++ b/src/scss/blocks/_footer.scss
@@ -1,14 +1,64 @@
 .footer {
-	background-color: rgb(62, 62, 62);
-	padding: 50px 0;
-	font-size: 32px;
-    color: #fff;
+  &__top {
+    padding: 110px 10px 60px;
+    text-align: center;
+    background-color: #333333;
+  }
 
-	h1 {
-		font-size: 32px;
-	}
+  &__logo {
+    display: inline-block;
+    margin-bottom: 70px;
+    padding: 0 35px 4px;
+    border-bottom: 2px solid #fcbb08;
+  }
 
-	@media (max-width: 1200px) {
-		font-size: 26px;
-	}
+  &__social {
+    display: flex;
+    justify-content: center;
+  }
+
+  &__social-item {
+    padding: 0 15px;
+  }
+
+  &__social-link {
+    font-family: var(--font-accent);
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+    letter-spacing: 4px;
+    text-transform: uppercase;
+    color: var(--light);
+  }
+
+  &__contacts {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    margin-top: 65px;
+    margin-bottom: 57px;
+    text-align: center;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 32px;
+    color: var(--light);
+
+    a {
+      color: inherit;
+    }
+  }
+
+  &__copy {
+		padding: 43px 10px 41px;
+    text-align: center;
+    font-size: 12px;
+    font-weight: 400;
+    color: #cccccc;
+    background: #2a2c2b;
+  }
+}
+
+.go-top {
+  display: inline-block;
 }
