--- a/src/scss/blocks/_menu.scss
+++ b/src/scss/blocks/_menu.scss
@@ -35,4 +35,63 @@
       }
     }
   }
+
+  &__btn {
+    position: relative;
+    z-index: 2;
+    display: none;
+    width: 60px;
+    height: 60px;
+
+    img {
+      width: 100%;
+    }
+  }
+}
+
+@media (max-width: 992px) {
+  .menu {
+    &__list-item + &__list-item {
+      margin-left: 20px;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .menu {
+    &__list {
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 0;
+      display: block;
+      text-align: center;
+      color: var(--light);
+      background-color: #333333;
+      transform: translateY(-200%);
+      transition: all 0.6s;
+
+      &.menu__list--active {
+        transform: translateY(0);
+      }
+    }
+
+    ul.menu__list {
+      padding: 90px 0 30px;
+    }
+
+    &__list-link {
+      display: inline-block;
+      padding: 15px 0;
+      font-size: 16px;
+    }
+
+    &__list-item + &__list-item {
+      margin-left: 0px;
+    }
+
+    &__btn {
+      display: block;
+    }
+  }
 }
