--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -33,3 +33,17 @@ body {
   height: 4px;
   background-color: var(--accent);
 }
+
+@media (max-width: 992px) {
+  .title {
+		font-size: 48px;
+    line-height: 60px;
+	}
+}
+
+@media (max-width: 576px) {
+  .title {
+		font-size: 30px;
+    line-height: 42px;
+	}
+}
