--- a/src/scss/blocks/_portfolio.scss
+++ b/src/scss/blocks/_portfolio.scss
@@ -146,3 +146,74 @@
     color: #9e9e9e;
   }
 }
+
+@media (max-width: 1200px) {
+  .portfolio {
+		&__top {
+      margin-bottom: 40px;
+    }
+	}
+}
+
+@media (max-width: 992px) {
+  .portfolio {
+		&__content {
+      column-count: 3;
+    }
+	}
+}
+
+@media (max-width: 768px) {
+  .portfolio {
+    padding: 70px 0 70px;
+
+    &__top {
+      margin-bottom: 30px;
+      flex-wrap: wrap;
+    }
+
+    &__title {
+      margin-bottom: 30px;
+    }
+
+    &__content {
+      column-count: 2;
+    }
+
+    &__add {
+      margin-bottom: 40px;
+    }
+
+    &__video {
+      margin-bottom: 75px;
+    }
+
+    &__numbers {
+      flex-wrap: wrap;
+    }
+
+    &__numbers-item {
+      width: 50%;
+      margin-bottom: 20px;
+    }
+  }
+
+  .blockquote {
+    margin-bottom: 40px;
+    padding: 0 10px;
+  }
+}
+
+@media (max-width: 576px) {
+  .portfolio {
+    padding: 35px 0 35px;
+
+    &__content {
+      column-count: 1;
+    }
+
+    &__numbers-item {
+      width: 100%;
+    }
+  }
+}
