--- a/src/scss/blocks/_slider-blog.scss
+++ b/src/scss/blocks/_slider-blog.scss
@@ -70,3 +70,51 @@
 .slick-next {
   right: -95px;
 }
+
+@media (max-width: 1440px) {
+  .slick-prev {
+    left: 0;
+  }
+
+  .slick-next {
+    right: 0;
+  }
+
+  .slider-blog__item {
+    padding: 190px 60px
+  }
+
+  ul.slick-dots {
+    margin-left: 60px;
+  }
+}
+
+@media (max-width: 768px) {
+  .slider-blog {
+    padding: 70px 0 70px;
+  }
+
+  .slider-blog__item {
+    padding: 40px 0;
+  }
+
+  .slider-blog__item-title {
+    font-size: 28px;
+    line-height: 35px;
+  }
+
+  ul.slick-dots {
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 576px) {
+  .slider-blog {
+    padding: 35px 0 35px;
+  }
+
+  .slider-blog__item-title {
+    font-size: 23px;
+    line-height: 32px;
+  }
+}
