--- a/src/scss/blocks/_connection.scss
+++ b/src/scss/blocks/_connection.scss
@@ -62,3 +62,33 @@
     border: none;
   }
 }
+
+@media (max-width: 1200px) {
+  .connection {
+    &__title {
+      margin-bottom: 30px;
+    }
+  }
+}
+
+@media (max-width: 992px) {
+  .connection {
+    background-image: none;
+  }
+
+  .form {
+    max-width: 100%;
+  }
+}
+
+@media (max-width: 768px) {
+  .connection {
+    padding: 70px 0 70px;
+  }
+}
+
+@media (max-width: 576px) {
+  .connection {
+    padding: 35px 0 35px;
+  }
+}
